<resources>
    <string name="app_name">Tap Counter</string>
    <string name="start_amp_tap"><![CDATA[Start & Tap!]]></string>
    <string name="reset">Reset</string>
    <string name="taps_0">Taps: 0</string>
    <string name="time_left_20">Time Left: 20</string>
    <string name="top_5_scores">Top 5 Scores:</string>
    <string name="time_left">Time left: %1$d seconds</string>
    <string name="times_up">Time\'s Up!</string>
    <string name="taps">Taps: %1$d</string>
    <string name="tap_button">Tap Button</string>
    <string name="reset_high_scores">Reset High Scores</string>
    <string name="high_scores_cleared">High Scores Reset!</string>
</resources>